--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 <body>
 <h1>Wake Up Earthlings</h1>
 <p>It's time to reconnect.</p>
+  <p>Inspiring conversations to change the world<br>
+    with your colleagues, friends, and neighbors.</p>
 </body>
 </html>
