--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
 <p>It's time to reconnect.</p>
   <p>Inspiring conversations to change the world<br>
     with your colleagues, friends, and neighbors.</p>
+  <div>
+    <picture>
+      <img src="https://www.dropbox.com/s/c414snpeo0pyghh/MovieProfile_TeamView_The%20internet%27s%20own%20boy_10%402x.png" alt="TeamView">
+    </picture>
+  </div>
 </body>
 </html>
