--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     with your colleagues, friends, and neighbors.</p>
   <div>
     <picture>
-      <img src="https://www.dropbox.com/s/c414snpeo0pyghh/MovieProfile_TeamView_The%20internet%27s%20own%20boy_10%402x.png" alt="TeamView">
+      <img src="MovieProfile_TeamView_%402x.png" alt="TeamView">
     </picture>
   </div>
 </body>
