--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     with your colleagues, friends, and neighbors.</p>
   <div>
     <picture>
-      <img src="MovieProfile_TeamView%402x.png" alt="TeamView">
+      <img src="MovieProfile_TeamView@2x.png" alt="TeamView">
     </picture>
   </div>
 </body>
