--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body background="Universe@2x.png">
 <h1>Wake Up Earthlings</h1>
 <p>It's time to reconnect.</p>
   <p>Inspiring conversations to change the world<br>
