--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-<body background="Universe@2x.png">
+<body style="background-image:url(Universe@2x.png)">
 <h1>Wake Up Earthlings</h1>
 <p>It's time to reconnect.</p>
   <p>Inspiring conversations to change the world<br>
     with your colleagues, friends, and neighbors.</p>
   <div>
     <picture>
-      <img src="MovieProfile_TeamView@2x.png" alt="TeamView" width="320">
+      <img src="MovieProfile_TeamView@2x.png" alt="TeamView" style="width:320;">
     </picture>
   </div>
 </body>
