--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
-<body style="background-image:url(Universe@2x.png)">
+  <head>
+    <style>
+      body {
+        background-color: #000000;
+        background-image: url("Universe@2x.png");
+        color: #cccccc;
+        font-family: system-ui;
+      }
+    </style>
+  </head>
+  
+<body>
 <h1>Wake Up Earthlings</h1>
 <p>It's time to reconnect.</p>
   <p>Inspiring conversations to change the world<br>
