--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <style>
-      body {
-        background-color: #000000;
-        background-image: url("Universe@2x.png");
-        color: #cccccc;
-        font-family: system-ui;
-      }
-    </style>
-  </head>
-  
+<head>
+  <style>
+    body {
+      background-color: #000000;
+      background-image: url("Universe@2x.png");
+      color: #cccccc;
+      font-family: system-ui;
+    }
+  </style>
+</head>
 <body>
 <h1>Wake Up Earthlings</h1>
 <p>It's time to reconnect.</p>
@@ -18,7 +17,7 @@
     with your colleagues, friends, and neighbors.</p>
   <div>
     <picture>
-      <img src="MovieProfile_TeamView@2x.png" alt="TeamView" style="width:320;">
+      <img src="MovieProfile_TeamView@2x.png" alt="TeamView" width="320">
     </picture>
   </div>
 </body>
