--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
       background-image: url("Universe@2x.png");
       color: #cccccc;
       font-family: system-ui;
+      text-align: center;
+    }
+    img {
+      display: block;
+      margin: auto;
+      width: 50%;
     }
   </style>
 </head>
@@ -17,7 +23,7 @@
     with your colleagues, friends, and neighbors.</p>
   <div>
     <picture>
-      <img src="MovieProfile_TeamView@2x.png" alt="TeamView" width="320">
+      <img src="MovieProfile_TeamView@2x.png" alt="TeamView">
     </picture>
   </div>
 </body>
