--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     body {
       background-color: #000000;
       background-image: url("Universe@2x.png");
-      color: #cccccc;
+      color: #ffffff;
       font-family: system-ui;
       text-align: center;
+    }
+    h1 {
+      color: #f8e71c;
+      font-family: "Ubuntu", system-ui;
+      font-weight: bold;
     }
     img {
       display: block;
