--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     }
     h1 {
       color: #f8e71c;
-      font-family: "Ubuntu", system-ui;
+      font-family: Ubuntu, system-ui;
       font-weight: bold;
+      text-transform: uppercase;
     }
     img {
       display: block;
