--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
       background-image: url("Universe@2x.png");
       color: #ffffff;
       font-family: system-ui;
+      font-weight: 500;
+      line-height: 140%;
       text-align: center;
     }
     h1 {
       color: #f8e71c;
-      font-family: Ubuntu, system-ui;
-      font-weight: bold;
+      font-family: Ubuntu;
+      font-weight: 700;
       text-transform: uppercase;
     }
     img {
@@ -25,12 +27,12 @@
 <body>
 <h1>Wake Up Earthlings</h1>
 <p>It's time to reconnect.</p>
-  <p>Inspiring conversations to change the world<br>
-    with your colleagues, friends, and neighbors.</p>
-  <div>
-    <picture>
-      <img src="MovieProfile_TeamView@2x.png" alt="TeamView">
-    </picture>
-  </div>
+<p>Inspiring conversations to change the world<br>
+  with your colleagues, friends, and neighbors.</p>
+<div>
+  <picture>
+    <img src="MovieProfile_TeamView@2x.png" alt="TeamView">
+  </picture>
+</div>
 </body>
 </html>
