--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
   <style>
     body {
-      background-color: #000000;
+      background-color: #0f003c;
       background-image: url("Universe@2x.png");
-      color: #ffffff;
+      color: #cccccc;
       font-family: system-ui;
-      font-weight: 500;
+      font-weight: 400;
       line-height: 140%;
       text-align: center;
     }
     h1 {
       color: #f8e71c;
-      font-family: Ubuntu;
-      font-weight: 700;
+      font-weight: 600;
       text-transform: uppercase;
     }
     img {
