--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
       background-image: url("Universe@2x.png");
       color: #cccccc;
       font-family: system-ui;
+      font-size: 1.389em;
       font-weight: 400;
       line-height: 140%;
       text-align: center;
     }
     h1 {
       color: #f8e71c;
+      font-size: 5.333em;
       font-weight: 600;
       text-transform: uppercase;
     }
