--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <style>
     body {
       background-color: #0f003c;
-      background-image: url("Universe@2x.png");
+      background-image: url(Universe@2x.png);
       color: #cccccc;
       font-family: system-ui;
       font-size: 1.389em;
