--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     h1 {
       color: #f8e71c;
       font-size: 5.333em;
-      font-weight: 600;
+      font-weight: 700;
+      line-height: 140%;
       text-transform: uppercase;
     }
     p {
       font-size: 1.389em;
-      font-weight: 400;
+      font-weight: 500;
       line-height: 140%;
     }
     img {
@@ -28,14 +29,18 @@
   </style>
 </head>
 <body>
-<h1>Wake Up Earthlings</h1>
-<p>It's time to reconnect.</p>
-<p>Inspiring conversations to change the world<br>
-  with your colleagues, friends, and neighbors.</p>
 <div>
-  <picture>
-    <img src="MovieProfile_TeamView@2x.png" alt="TeamView">
-  </picture>
+  <h1>Wake Up<br>Earthlings</h1>
+  <p>It's time to reconnect.</p>
+  <p>Inspiring conversations to change the world<br>
+    with your colleagues, friends, and neighbors.</p>
+</div>
+<div>
+  <p>
+    <picture>
+      <img src="MovieProfile_TeamView@2x.png" alt="TeamView">
+    </picture>
+  </p>
 </div>
 </body>
 </html>
