--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     }
     h1 {
       color: #f8e71c;
+      font-family: Ubuntu;
       font-size: 5.333em;
       font-weight: 700;
       line-height: 140%;
