--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <style>
+    @import url('https://fonts.googleapis.com/css?family=Ubuntu:700');
     body {
       background-color: #0f003c;
       background-image: url(Universe@2x.png);
