--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 </head>
 <body>
 <div>
+  <p>
+    <picture>
+      <img src="Logo_transparent.png" alt="Wake Up Earthlings Logo" style="width:180px;">
+    </picture>
+  </p>
   <h1>Wake Up<br>Earthlings</h1>
   <p>It's time to reconnect.</p>
   <p>Inspiring conversations to change the world<br>
