--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
       <img src="Logo_transparent.png" alt="Wake Up Earthlings Logo" style="width:180px;">
     </picture>
   </p>
-  <h1>Wake Up<br>Earthlings</h1>
+  <h1>Wake Up<br>
+    Earthlings</h1>
   <p>It's time to reconnect.</p>
+  <br>
   <p>Inspiring conversations to change the world<br>
     with your colleagues, friends, and neighbors.</p>
 </div>
-<br><br><br><br>
+<br><br><br>
 <div>
   <p>
     <picture>
