--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
       <img src="MovieProfile_TeamView@2x.png" alt="TeamView">
     </picture>
   </p>
+  <p>
+    <picture>
+      <img src="nu3io_2-inch@2x.png" alt="Nu3io">
+    </picture>
+  </p>
 </div>
 </body>
 </html>
