--- a/index.html
+++ b/index.html
@@ -23,11 +23,6 @@
       font-weight: 500;
       line-height: 140%;
     }
-    img {
-      display: block;
-      margin: auto;
-      width: 320px;
-    }
   </style>
 </head>
 <body>
@@ -48,12 +43,12 @@
 <div>
   <p>
     <picture>
-      <img src="MovieProfile_TeamView@2x.png" alt="TeamView">
+      <img src="MovieProfile_TeamView@2x.png" alt="TeamView" style="width:420px;">
     </picture>
   </p>
   <p>
     <picture>
-      <img src="nu3io_2-inch@2x.png" alt="Nu3io">
+      <img src="nu3io_2-inch@2x.png" alt="Nu3io" style="width:144px;">
     </picture>
   </p>
 </div>
