--- a/wakeup/index.html
+++ b/wakeup/index.html
@@ -41,6 +41,8 @@
   <br>
   <p>Inspiring conversations to change the world<br>
     with your colleagues, friends, and neighbors.</p>
+  <p>Organize your own movie screenings<br>
+    and activate your local community.</p>
 </div>
 <br><br><br>
 <div>
