--- a/wakeup/index.html
+++ b/wakeup/index.html
@@ -32,7 +32,7 @@
 <div>
   <p>
     <picture>
-      <img src="Logo_transparent.png" alt="Wake Up Earthlings Logo" style="width:180px;">
+      <img src="Logo2@512w.png" alt="Wake Up Earthlings Logo" style="width:180px;">
     </picture>
   </p>
   <h1>Wake Up<br>
