--- a/wakeup/index.html
+++ b/wakeup/index.html
@@ -5,7 +5,7 @@
     @import url('https://fonts.googleapis.com/css?family=Ubuntu:700');
     body {
       background-color: #0f003c;
-      background-image: url(Universe@2x.png);
+      background-image: url(Universe@2048w.png);
       color: #cccccc;
       font-family: system-ui;
       text-align: center;
