--- a/wakeup/index.html
+++ b/wakeup/index.html
@@ -56,6 +56,11 @@
       <img src="nu3io_2-inch@2x.png" alt="Nu3io" style="width:144px;">
     </picture>
   </p>
+  <p>
+    <picture>
+      <img src="https://xuanmir.github.io/nu3io/nu3io_1-inch@2x.png" alt="Nu3io" style="width:72px;">
+    </picture>
+  </p>
 </div>
 </body>
 </html>
