--- a/wakeup/index.html
+++ b/wakeup/index.html
@@ -48,7 +48,14 @@
 <div>
   <p>
     <picture>
-      <img src="MovieProfile_TeamView@2x.png" alt="TeamView" style="width:420px;">
+      <img src="MovieProfile-TeamView-320px@2x.png" alt="TeamView" style="width:320px;">
+    </picture>
+  </p>
+</div>
+<div>
+  <p>
+    <picture>
+      <img src="https://xuanmir.github.io/mvteclat/Logo-72px@2x.png" alt="Mvt Éclat" style="width:72px;">
     </picture>
   </p>
 </div>
