--- a/wakeup/index.html
+++ b/wakeup/index.html
@@ -55,7 +55,7 @@
 <div>
   <p>
     <picture>
-      <img src="https://xuanmir.github.io/mvteclat/Logo-72px@2x.png" alt="Mvt Éclat" style="width:72px;">
+      <img src="https://xuanmir.github.io/mvteclat/Logo-White-72px@2x.png" alt="Mvt Éclat" style="width:72px;">
     </picture>
   </p>
 </div>
