--- a/wakeup/index.html
+++ b/wakeup/index.html
@@ -49,14 +49,14 @@
 <div>
   <p>
     <picture>
-      <img src="MovieProfile-TeamView-320px@2x.png" alt="TeamView" style="width:320px;">
+      <img src="MovieProfile-TeamView-320px@2x.png" alt="MovieProfile-TeamView" style="width:320px;">
     </picture>
   </p>
 </div>
 <div>
   <p>
     <picture>
-      <img src="https://xuanmir.github.io/mvteclat/Logo-Blue-72px@2x.png" alt="Mvt Éclat" style="width:72px;">
+      <img src="https://xuanmir.github.io/mvteclat/Logo-Blue-72px@2x.png" alt="Mvt Éclat Logo" style="width:72px;">
     </picture>
   </p>
 </div>
