--- a/wakeup/index.html
+++ b/wakeup/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="author" content="Juan Diosdado">
+  <meta name="description" content="Inspiring conversations to change the world with your colleagues, friends, and neighbors.">
+  <meta name="keywords" content="Blockchain, Climate Change, Community, Documentary, Ecohacking, Impact, Libertech, Movie, Nonprofit, Open Source, Semantic Media, Social Change, Token">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     @import url('https://fonts.googleapis.com/css?family=Ubuntu:700');
     body {
