--- a/wakeup/index.html
+++ b/wakeup/index.html
@@ -38,7 +38,7 @@
 <div>
   <p>
     <picture>
-      <img src="Logo2t-160px@4x.png" alt="Wake Up Earthlings Logo" style="width:160px;">
+      <img src="WakeUp-Logo2t-160px@4x.png" alt="Wake Up Earthlings Logo" style="width:160px;">
     </picture>
   </p>
   <h1>Wake Up<br>
@@ -61,7 +61,7 @@
 <div>
   <p>
     <picture>
-      <img src="https://xuanmir.github.io/mvteclat/Logo-Blue-72px@2x.png" alt="Mvt Éclat Logo" style="width:72px;">
+      <img src="MvtEclat-Logo-Blue-72px@2x.png" alt="Mvt Éclat Logo" style="width:72px;">
     </picture>
   </p>
 </div>
