--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <div>
   <p>
     <picture>
-      <img src="MovieProfile-TeamView-320px@2x.png" alt="MovieProfile-TeamView" style="width:320px;">
+      <img src="Movie-Team-320px@2x.png" alt="Movie-Team" style="width:320px;">
     </picture>
   </p>
 </div>
