--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="apple-touch-icon" sizes="120x120" href="apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon-180x180.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="author" content="Juan Diosdado">
   <meta name="description" content="Inspiring conversations to change the world with your colleagues, friends, and neighbors.">
