--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon-180x180.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="WakeUp!">
   <meta name="author" content="Juan Diosdado">
   <meta name="description" content="Inspiring conversations to change the world with your colleagues, friends, and neighbors.">
   <meta name="keywords" content="Blockchain, Climate Change, Community, Crypto Token, Documentary, Ecohacking, Impact, Libertech, Movie Screening, Nonprofit, Open Source, P2P, Peer to Peer, Semantic Media, Social Change">
