--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       background-color: #0f003c;
       background-image: url(Universe@1024w.png);
       color: #cccccc;
-      font-family: system-ui;
+      font-family: "SF Pro Text", system-ui, "Segoe UI", sans-serif;
       text-align: center;
     }
     h1 {
@@ -26,6 +26,7 @@
       text-transform: uppercase;
     }
     p {
+      font-family: "SF Pro Display", system-ui, "Segoe UI", sans-serif;
       font-size: 1.5em;
       font-weight: 500;
       line-height: 140%;
