Updated app views

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon-180x180.png">
+  <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon-180x180.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-title" content="WakeUp!">
   <meta name="author" content="Juan Diosdado">
@@ -12,7 +12,7 @@
     @import url('https://fonts.googleapis.com/css?family=Ubuntu:700');
     body {
       background-color: #0f003c;
-      background-image: url(Universe@1024w.png);
+      background-image: url(images/Background-Universe-1024w.png);
       color: #cccccc;
       font-family: "SF Pro Text", system-ui, "Segoe UI", sans-serif;
       text-align: center;
@@ -41,7 +41,7 @@
 <div>
   <p>
     <picture>
-      <img src="WakeUp-Logo2t-160px@4x.png" alt="Wake Up Earthlings Logo" style="width:160px;">
+      <img src="images/Logo-WakeUp-GlobeCry-160px@2x.png" alt="Wake Up Earthlings Logo" style="width:160px;">
     </picture>
   </p>
   <h1>Wake Up<br>
@@ -57,14 +57,28 @@
 <div>
   <p>
     <picture>
-      <img src="Movie-Team-320px@2x.png" alt="Movie-Team" style="width:320px;">
+      <img src="images/Movie-StoryView-320px@2x.png" alt="Movie-StoryView" style="width:320px;">
     </picture>
   </p>
 </div>
 <div>
   <p>
     <picture>
-      <img src="MvtEclat-Logo-Blue-72px@2x.png" alt="Mvt Éclat Logo" style="width:72px;">
+      <img src="images/Movie-TeamView-320px@2x.png" alt="Movie-TeamView" style="width:320px;">
+    </picture>
+  </p>
+</div>
+<div>
+  <p>
+    <picture>
+      <img src="images/Profile-ActivityView-320px@2x.png" alt="Profile-ActivityView" style="width:320px;">
+    </picture>
+  </p>
+</div>
+<div>
+  <p>
+    <picture>
+      <img src="images/Logo-MvtEclat-Blue-72px@2x.png" alt="Mvt Éclat Logo" style="width:72px;">
     </picture>
   </p>
 </div>
