--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     body {
       background-color: #0f003c;
       background-image: url(images/Background-Universe-1024w.png);
-      color: #cccccc;
+      color: #f2f2f2;
       font-family: "SF Pro Text", system-ui, "Segoe UI", sans-serif;
       text-align: center;
     }
@@ -27,7 +27,7 @@
     }
     p {
       font-family: "SF Pro Display", system-ui, "Segoe UI", sans-serif;
-      font-size: 1.5em;
+      font-size: 3em;
       font-weight: 500;
       line-height: 140%;
     }
@@ -41,7 +41,11 @@
 <div>
   <p>
     <picture>
-      <img src="images/Logo-WakeUp-GlobeCry-160px@2x.png" alt="Wake Up Earthlings Logo" style="width:160px;">
+      <img
+        srcset="images/Logo-WakeUp-GlobeCry-160px@2x.png 2x,
+                images/Logo-WakeUp-GlobeCry-160px@3x.png 3x"
+        alt="Wake Up Earthlings Logo"
+        style="width:160px;">
     </picture>
   </p>
   <h1>Wake Up<br>
@@ -50,6 +54,7 @@
   <br>
   <p>Inspiring conversations to change the world<br>
     with your colleagues, friends, and neighbors.</p>
+  <br>
   <p>Organize your own movie screenings<br>
     and activate your local community.</p>
 </div>
@@ -57,28 +62,44 @@
 <div>
   <p>
     <picture>
-      <img src="images/Movie-StoryView-320px@2x.png" alt="Movie-StoryView" style="width:320px;">
+      <img
+        srcset="images/Movie-StoryView-320px@2x.png 2x,
+                images/Movie-StoryView-320px@3x.png 3x"
+        alt="Movie-StoryView"
+        style="width:320px;">
     </picture>
   </p>
 </div>
 <div>
   <p>
     <picture>
-      <img src="images/Movie-TeamView-320px@2x.png" alt="Movie-TeamView" style="width:320px;">
+      <img
+        srcset="images/Movie-TeamView-320px@2x.png 2x,
+                images/Movie-TeamView-320px@3x.png 3x" 
+        alt="Movie-TeamView"
+        style="width:320px;">
     </picture>
   </p>
 </div>
 <div>
   <p>
     <picture>
-      <img src="images/Profile-ActivityView-320px@2x.png" alt="Profile-ActivityView" style="width:320px;">
+      <img
+        srcset="images/Profile-ActivityView-320px@2x.png 2x,
+                images/Profile-ActivityView-320px@3x.png 3x"
+        alt="Profile-ActivityView"
+        style="width:320px;">
     </picture>
   </p>
 </div>
 <div>
   <p>
     <picture>
-      <img src="images/Logo-MvtEclat-Blue-72px@2x.png" alt="Mvt Éclat Logo" style="width:72px;">
+      <img
+        srcset="images/Logo-MvtEclat-Blue-72px@2x.png 2x,
+                images/Logo-MvtEclat-Blue-72px@3x.png 3x"
+        alt="Mvt Éclat Logo"
+        style="width:72px;">
     </picture>
   </p>
 </div>
