--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
   <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon-180x180.png">
-  <link rel="icon" href="images/Logo-WakeUp-GlobeCry-160px@2x.png">
+  <link rel="icon" href="favicon.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-title" content="WakeUp!">
   <meta name="author" content="Juan Diosdado">
