--- a/index.html
+++ b/index.html
@@ -18,19 +18,25 @@
       font-family: "SF Pro Text", system-ui, "Segoe UI", sans-serif;
       text-align: center;
     }
+    .small {
+      font-family: "SF Pro Display", system-ui, "Segoe UI", sans-serif;
+      font-size: 2em;
+      font-weight: 500;
+      line-height: 1.4;
+    }
     h1 {
       color: #f8e71c;
       font-family: Ubuntu;
       font-size: 6em;
       font-weight: 700;
-      line-height: 120%;
+      line-height: 1.2;
       text-transform: uppercase;
     }
     p {
       font-family: "SF Pro Display", system-ui, "Segoe UI", sans-serif;
       font-size: 3em;
       font-weight: 500;
-      line-height: 140%;
+      line-height: 1.4;
     }
     img {
       width: 50%;
@@ -39,7 +45,7 @@
   <title>Wake Up Earthlings</title>
 </head>
 <body>
-<div>
+<div id="intro">
   <p>
     <picture>
       <img
@@ -50,17 +56,17 @@
     </picture>
   </p>
   <h1>Wake Up<br>
-    Earthlings</h1>
+      Earthlings</h1>
   <p>It's time to reconnect.</p>
   <br>
   <p>Inspiring conversations to change the world<br>
-    with your colleagues, friends, and neighbors.</p>
+     with your colleagues, friends, and neighbors.</p>
   <br>
   <p>Organize your own movie screenings<br>
-    and activate your local community.</p>
+     and activate your local community.</p>
 </div>
 <br><br><br>
-<div>
+<div class="demo-screen" id="story-view">
   <p>
     <picture>
       <img
@@ -71,7 +77,7 @@
     </picture>
   </p>
 </div>
-<div>
+<div class="demo-screen" id="team-view">
   <p>
     <picture>
       <img
@@ -82,7 +88,7 @@
     </picture>
   </p>
 </div>
-<div>
+<div class="demo-screen" id="activity-view">
   <p>
     <picture>
       <img
@@ -93,7 +99,15 @@
     </picture>
   </p>
 </div>
-<div>
+<!--
+<div id="mailing-list">
+  <p>Ready?</p>
+  <p class="small">Sign up to our mailing list</p>
+  <p class="small">Join our team</p>
+  <p class="small">Support our project</p>
+</div>
+-->
+<div id="footer">
   <p>
     <picture>
       <img
