Profile highlighting colors & segmented controls

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
   <p>
     <picture>
       <img
-        srcset="images/Profile-ActivityView-320px@2x.png 2x,
-                images/Profile-ActivityView-320px@3x.png 3x"
-        alt="Profile-ActivityView"
+        srcset="images/Person-ActivityView-320px@2x.png 2x,
+                images/Person-ActivityView-320px@3x.png 3x"
+        alt="Person-ActivityView"
         style="width:320px;">
     </picture>
   </p>
