--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
   <link rel="apple-touch-icon" href="images/apple-touch-icon-180x180.png" sizes="180x180">
-  <link rel="icon" href="images/favicon2-320x320.png" sizes="320x320" type="image/png">
+  <link rel="icon" href="images/favicon-320x320.png" sizes="320x320" type="image/png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-title" content="WakeUp!">
   <meta name="author" content="Juan Diosdado">
