Adeed Twitter to meta

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="Juan Diosdado">
   <meta name="description" content="Inspiring conversations to change the world with your colleagues, friends, and neighbors.">
   <meta name="keywords" content="Basic Income, Blockchain, Climate Change, Community, Crypto Token, Documentaries, Documentary, Ecohacking, Education, Food Security, Global Warming, Immigration, Libertech, Movie Screening, Nonprofit, Nutrition, Open Source, P2P, Peer to Peer, Refugees, Semantic Media, Social Change, Social Impact, Storytelling, Sustainability">
+  <meta name="twitter:site" content="@wkupearth">
   <style>
     @import url('https://fonts.googleapis.com/css?family=Ubuntu:700');
     body {
