Changed font source

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   <meta name="keywords" content="Basic Income, Blockchain, Climate Change, Community, Crypto Token, Documentaries, Documentary, Ecohacking, Education, Food Security, Global Warming, Immigration, Libertech, Movie Screening, Nonprofit, Nutrition, Open Source, P2P, Peer to Peer, Refugees, Semantic Media, Social Change, Social Impact, Storytelling, Sustainability">
   <meta name="twitter:site" content="@wkupearth">
   <style>
-    @import url('https://fonts.googleapis.com/css?family=Ubuntu:700');
+    @font-face {
+      font-family: "Ubuntu";
+      src: url(fonts/Ubuntu-Bold.ttf) format("truetype");
+      font-weight: 700;
+    }
     body {
       background-color: #0f003c;
       background-image: url(images/Background-Universe-1024w.png);
