--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-  <link rel="apple-touch-icon" href="images/apple-touch-icon-180x180.png" sizes="180x180">
-  <link rel="icon" href="images/favicon-320x320.png" sizes="320x320" type="image/png">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-title" content="WakeUp!">
   <meta name="author" content="Juan Diosdado">
-  <meta name="description" content="Inspiring conversations to change the world with your colleagues, friends, and neighbors.">
+  <meta name="description" content="Made up of atoms, bits, memes, and dreams.">
   <meta name="keywords" content="Basic Income, Blockchain, Climate Change, Community, Crypto Token, Documentaries, Documentary, Ecohacking, Education, Food Security, Global Warming, Immigration, Libertech, Movie Screening, Nonprofit, Nutrition, Open Source, P2P, Peer to Peer, Refugees, Semantic Media, Social Change, Social Impact, Storytelling, Sustainability">
-  <meta name="twitter:site" content="@wkupearth">
+  <meta name="twitter:site" content="@ikonoklast">
   <style>
     @font-face {
       font-family: "Ubuntu";
@@ -47,71 +42,12 @@
       width: 50%;
     }
   </style>
-  <title>Wake Up Earthlings</title>
+  <title>Xuan Myr</title>
 </head>
 <body>
 <div id="intro">
-  <p>
-    <picture>
-      <img
-        srcset="images/Logo-WakeUp-GlobeCry-160px@2x.png 2x,
-                images/Logo-WakeUp-GlobeCry-160px@3x.png 3x"
-        alt="Wake Up Earthlings Logo"
-        style="width:160px;">
-    </picture>
-  </p>
-  <h1>Wake Up<br>
-      Earthlings</h1>
-  <p>It's time to reconnect.</p>
-  <br>
-  <p>Inspiring conversations to change the world<br>
-     with your colleagues, friends, and neighbors.</p>
-  <br>
-  <p>Organize your own movie screenings<br>
-     and activate your local community.</p>
+  <p>Hi.</p>
 </div>
-<br><br><br>
-<div class="demo-screen" id="story-view">
-  <p>
-    <picture>
-      <img
-        srcset="images/Movie-StoryView-320px@2x.png 2x,
-                images/Movie-StoryView-320px@3x.png 3x"
-        alt="Movie-StoryView"
-        style="width:320px;">
-    </picture>
-  </p>
-</div>
-<div class="demo-screen" id="team-view">
-  <p>
-    <picture>
-      <img
-        srcset="images/Movie-TeamView-320px@2x.png 2x,
-                images/Movie-TeamView-320px@3x.png 3x" 
-        alt="Movie-TeamView"
-        style="width:320px;">
-    </picture>
-  </p>
-</div>
-<div class="demo-screen" id="activity-view">
-  <p>
-    <picture>
-      <img
-        srcset="images/Person-ActivityView-320px@2x.png 2x,
-                images/Person-ActivityView-320px@3x.png 3x"
-        alt="Person-ActivityView"
-        style="width:320px;">
-    </picture>
-  </p>
-</div>
-<!--
-<div id="mailing-list">
-  <p>Ready?</p>
-  <p class="small">Sign up to our mailing list</p>
-  <p class="small">Join our team</p>
-  <p class="small">Support our project</p>
-</div>
--->
 <div id="footer">
   <p>
     <picture>
