--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
         alt="Mvt Éclat Logo"
         style="width:72px;">
     </picture>
+    <a href="https://github.com/mvteclat">
+        <img
+        srcset="images/Logo-MvtEclat-Blue-72px@2x.png 2x,
+                images/Logo-MvtEclat-Blue-72px@3x.png 3x"
+        alt="Mvt Éclat Logo"
+        style="width:72px;">
+    </a>
   </p>
 </div>
 </body>
