--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
         alt="Mvt Éclat Logo"
         style="width:72px;">
     </a>
+    <a href="https://github.com/mvteclat">
+        <picture>
+            <img
+            srcset="images/Logo-MvtEclat-Blue-72px@2x.png 2x,
+                    images/Logo-MvtEclat-Blue-72px@3x.png 3x"
+            alt="Mvt Éclat Logo"
+            style="width:72px;">
+        </picture>
+    </a>
   </p>
 </div>
 </body>
