--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
   <p>Hi.</p>
 </div>
 <div id="projects">
-  <p><a href="https://github.com/HolovieLab">Nutrit</a></p>
+  <p><a href="">Nutrit</a></p>
   <p><a href="https://github.com/xuanmir/PoopNet">Poopnet</a></p>
 </div>
-<div id="organizations">
+<!-- <div id="organizations">
   <p><a href="https://github.com/HolovieLab">HolovieLab</a></p>
   <p><a href="https://github.com/mvteclat">Mouvement Éclat</a></p>
-</div>
+</div> -->
 <div id="footer">
   <p>
     <a href="https://github.com/mvteclat">
