--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="author" content="Juan Diosdado">
   <meta name="description" content="Made up of atoms, bits, memes, and dreams.">
-  <meta name="keywords" content="Basic Income, Blockchain, Climate Change, Community, Crypto Token, Documentaries, Documentary, Ecohacking, Education, Food Security, Global Warming, Immigration, Libertech, Movie Screening, Nonprofit, Nutrition, Open Source, P2P, Peer to Peer, Refugees, Semantic Media, Social Change, Social Impact, Storytelling, Sustainability">
+  <meta name="keywords" content="Basic Income, Blockchain, Climate Change, Community, Crypto Token, Documentaries, Documentary, Ecohacking, Education, Food Security, Global Warming, Immigration, Libertech, Microbiome, Movie Screening, Nonprofit, Nutrition, Open Source, P2P, Peer to Peer, Refugees, Semantic Media, Social Change, Social Impact, Storytelling, Sustainability">
   <meta name="twitter:site" content="@ikonoklast">
   <style>
     @font-face {
@@ -15,11 +15,11 @@
       background-color: #0f003c;
       background-image: url(images/Background-Universe-1024w.png);
       color: #f2f2f2;
-      font-family: "SF Pro Text", system-ui, "Segoe UI", sans-serif;
+      font-family: "SF Pro", system-ui, "Segoe UI", sans-serif;
       text-align: center;
     }
     .small {
-      font-family: "SF Pro Display", system-ui, "Segoe UI", sans-serif;
+      font-family: "SF Pro", system-ui, "Segoe UI", sans-serif;
       font-size: 2em;
       font-weight: 500;
       line-height: 1.4;
@@ -33,7 +33,7 @@
       text-transform: uppercase;
     }
     p {
-      font-family: "SF Pro Display", system-ui, "Segoe UI", sans-serif;
+      font-family: "SF Pro", system-ui, "Segoe UI", sans-serif;
       font-size: 3em;
       font-weight: 500;
       line-height: 1.4;
@@ -45,9 +45,9 @@
   <title>Xuan Mir</title>
 </head>
 <body>
-<div id="intro">
+<!-- <div id="intro">
   <p>Hi.</p>
-</div>
+</div> -->
 <div id="projects">
   <p><a href="">Nutrit</a></p>
   <p><a href="https://github.com/xuanmir/PoopNet">Poopnet</a></p>
